--- a/archives.html
+++ b/archives.html
@@ -14,37 +14,45 @@
 
   </head>
   <body class= "bghome">
+    <ul style="background-color:tan;">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="black-african-american.html">Black Stories</a></li>
+      <li><a href="latina.html">Latina Stories</a></li>
+      <li><a href="asian.html">Asian Stories</a></li>
+      <li><a href="native-american.html">Native American Stories</a></li>
+     
+    </ul>
     <div class="header2 titlefont pgtext container ">
       <center><h2>Archives</h2></center></div>
-      <h1>Looking for more and/or older information... you've in the right place. Here all the resources and stories we have shared in the past!</h1>
+      <h1>Looking for more and/or older information... you're in the right place. Here all the resources and stories we have shared in the past!</h1>
     <script src="script.js"></script>
     <div class="container" style="padding-top:20px">
   
     
   <div>
 
-      <center><h1  style="background-color:#DB7093;"> Asian Archives</h1></center>
+      <center><h1  style="background-color:tan; color:#DB7093"> Asian Archives</h1></center>
      <div>Asian stories/ additional resources go here
    </div> 
   </div>
   
   <div >
-    <div style="background-color:#A71D31;">
-      <center><h1>Black/ African-American Archives</h1></center></div>
+    <div style="background-color:tan">
+      <center><h1 style="color:#A71D31">Black/ African-American Archives</h1></center></div>
     <div style= "border-left-style: solid; color:#F2DFCF"></div> African-American stories/ additional resources go here
    
   </div>
   
   <div>
-    <div  style="background-color:#6FB6EC;">
-      <center><h1>Native American Archives</h1></center></div>
+    <div style="background-color:tan;">
+      <center><h1 style="color:#6FB6EC">Native American Archives</h1></center></div>
     <div  style= "border-left-style: solid; color:#F2DFCF"></div> Native American stories/ additional resources go here
    
   </div>
 
   <div>
-    <div style="background-color:#6AB486">
-      <center><h1 >Latina Archives</h1></center></div>
+    <div style="background-color:tan;">
+      <center><h1 style="color:#6AB486">Latina Archives</h1></center></div>
     <div  > Latina stories/ additional resources go here</div>
    
   </div>
