--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             </div>
             <div class="row20">
               <div class="col-25">
-                <label for="country">Which Group Do You Identift With</label>
+                <label for="country">Which Group Do You Identify With</label>
               </div>
               <div class="col-75">
                 <select id="country" name="country">
